--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
+		"express-validator": "^6.15.0",
 		"mysql2": "^3.2.0",
 		"reflect-metadata": "^0.1.13",
 		"typeorm": "^0.3.13"
